# itmo-python-backend-course

./: .gitignore  .pylintrc  pyproject.toml  readme.md
Homework 1/: app.py  constants.py  readme.md  router.py  schemas.py
Homework 2/: .env.example  readme.md
Homework 2/src/: app.py  config.py
Homework 2/src/courses/: constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py  utils.py
Homework 2/src/database/: base.py  data.py  db.py
Homework 2/src/tests/: test_integration.py  test_unit.py
Homework 3/: .env.example  readme.md
Homework 3/api_gateway/: app.py  settings.py
Homework 3/api_gateway/auth/: dependencies.py  router.py  schemas.py  service.py
Homework 3/api_gateway/courses/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
Homework 3/api_gateway/time_checking/: dependencies.py  router.py  schemas.py  service.py
Homework 3/auth_microservice/: app.py  settings.py
Homework 3/auth_microservice/database/: data.py  db.py  models.py
Homework 3/auth_microservice/service/: classes.py  repository.py  (+2 more)
Homework 3/course_microservice/: app.py  settings.py
Homework 3/protos/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  course.proto  course_pb2.py  course_pb2.pyi  course_pb2_grpc.py  time_checking.proto  time_checking_pb2.py  time_checking_pb2.pyi  time_checking_pb2_grpc.py
Homework 3/time_checking/: app.py  settings.py
Homework 4/: .env.example  Dockerfile  docker-compose.yml  readme.md
Homework 4/src/: app.py  config.py  router.py  schemas.py
(+11 files in other folders)
